<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MensajeroX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <string name="title_activity_user_logger">Verifique su número de teléfono</string>
    <string name="ok_button">Hecho</string>
    <string name="wellcome_message">Bienvenido</string>
    <string name="back_button">Volver</string>
    <string name="phone_number_notification">Número de télefono</string>
    <string name="title_activity_informacion">Información</string>
    <string name="derechos">Copyleft @ 2015 MensajeroX inc.\nAll wrongs reserved. </string>
    <string name="version">Versión: 1.0.0</string>
    <string name="area_code_confirmation_message">Por favor confirme el código de su país e ingrese su número de télefono</string>
    <string name="yes_button">Si</string>
    <string name="edit_button">Editar</string>
    <string name="number_confirmation">Confirme su número:</string>
    <string name="is_that_your_phone">Es correcto el numero de telefono?</string>
    <string-array name="Paises">
            <item>Argentina</item>
            <item>Brasil</item>
            <item>Chile</item>
            <item>Paraguay</item>
            <item>Uruguay</item>
        </string-array>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_conversations">Conversaciones</string>
    <string name="title_activity_conversation">ChatActivity</string>
    <string name="send">Enviar</string>
    <string name="profile_state_connected">Conectado</string>
    <string name="profile_state_disconnected">Desconectado</string>
    <string name="profile_save_button">Guardar</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_state">Estado</string>
    <string name="title_activity_authentication">authenticationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="profile_password">Contraseña</string>
    <string name="newPassword">nueva contraseña</string>
    <string name="information">Información</string>
    <string name="profile">Editar Perfil</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_tab_layout">TabLayoutActivity</string>
    <string name="broadcast_button">Lista de difusión</string>
    <string name="broadcast_label">Mensaje</string>
    <string name="broadcast_description_text">Ingrese aquí el mensaje..</string>
    <string name="ip_label">IP</string>
    <string name="ip_description">Número de Ip...</string>
    <string name="title_activity_ip_port">IpPortActivity</string>
    <string name="contact_info">Info Contacto</string>
    <string name="title_activity_contact_info">Info. del contacto</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="checkIn">Check-In</string>
    <string name="profile_location">Ubicación</string>

</resources>
