<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dk.mensajero.Activities.UserLoggerActivity"
    android:background="#FFFFFF"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:alpha="0.8"
        android:textColor="#1E90FF"
        android:id="@+id/buttonOk"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/areaCode"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:divider="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumber"
        android:divider="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textStyle="bold"
        android:hint="@string/phone_number_notification" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberNotification"
        android:text="@string/phone_number_notification"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_toLeftOf="@+id/buttonOk"
        android:padding="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/area_code_confirmation_message"
        android:textColor="#000000"
        android:id="@+id/areaCodeConfirmationMessage"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonOk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandableListCountries"
        android:layout_above="@+id/phoneNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog"
        android:nestedScrollingEnabled="false"
        android:gravity="left" />

    <RelativeLayout
        android:id="@+id/numberConfirmationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/phoneNumber"
        android:layout_alignRight="@+id/areaCodeConfirmationMessage"
        android:layout_alignEnd="@+id/areaCodeConfirmationMessage"
        android:visibility="gone"
        android:layout_alignTop="@+id/areaCodeConfirmationMessage">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:id="@+id/yesButton"
            android:textColor="#1E90FF"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:backgroundTintMode="screen" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            android:id="@+id/editButton"
            android:textColor="#1E90FF"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_confirmation"
            android:id="@+id/numberConfirmation"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:gravity="center"
            android:textColor="#1E90FF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_above="@+id/isThatYourPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_that_your_phone"
            android:id="@+id/isThatYourPhone"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
